--- a/public/index.html
+++ b/public/index.html
@@ -9,31 +9,8 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <title>React App</title>
-
+    <title>TV Show Finder using the tvmaze.com API</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
-    <style>
-      body { background-color: gainsboro; }
-      /* body { box-sizing: border-box; min-height: 100vh; margin: 0; border-bottom: solid 25px #ad3127; } */
-      .btn { background-color: darkblue; color: white; font-weight: bold; font-size: 100%; border-radius: 12px; }
-      .header { background-color: darkblue; width: 100%; margin: 0px; }
-      .header_text { color: white; font-weight: bold; padding: 10px 10px 10px 20px; text-align: left; font-family: sans-serif; font-size: 150%; }
-
-      .pg_body { margin: 20px 30px; }
-      .root { background-color: white; padding: 20px; min-height: 300px; }
-
-      .input_searchterm { position:relative; width: 40% !important; padding: 15px 15px 15px 60px !important; font-size: 125% !important; border-radius: 12px !important; background-color: gainsboro; border: 0px; }
-      .btn_search { padding: 15px 10px; margin-left: 10px; }
-      .fa-search { position: relative; margin-right: -45px; top: 5px; z-index: 10000; }
-
-      /* Set a hover effect for the button*/  
-      .btn_search:hover { opacity: 0.8; } 
-
-      .results_block { padding-top: 20px; width: 70%; margin: 0px auto; }
-      .showBlock { background-color: gainsboro; padding: 20px; margin-top: 30px; display: flex;}
-      .showInfo { padding-left: 50px; }
-      .btn_episodes { padding: 10px 10px; }
-    </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
