Adds a quick and dirty main header

--- a/public/index.html
+++ b/public/index.html
@@ -11,9 +11,15 @@
     />
     <title>TV Show Finder using the tvmaze.com API</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
+    <link rel="stylesheet" href="./index.css">
   </head>
   <body>
+    <div class="header1">
+      <div class="header1Name"><a href='http://www.jeffolivier.codes' title='HOME'>Jeff Olivier Codes</a></div>
+    </div>
+
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    
     <div id="root" class="root"></div>
   </body>
 </html>
