--- a/public/index.html
+++ b/public/index.html
@@ -1,35 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="./images/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <title>TV Show Finder using the tvmaze.com API</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
-    <link rel="stylesheet" href="./index.css">
-  </head>
-  <body>
-    <div class="header">
-      <style>
-          .header { background-image: url("./images/header.jpeg");
-              background-position: center 15%; background-repeat: no-repeat; background-size: cover;
-              padding: 10px 10px 10px 20px;
-              color: white; font-weight: bold; text-align: left; font-family: sans-serif; font-size: 150%;
-          }
-          .header a { color: white; text-decoration: none; }
-          @media only screen and (max-width: 800px) { .header { background-position: right; } }
-          @media only screen and (max-width: 700px) { .header { padding: 10px; } }
-      </style>
-      <div class="name"><a href='http://www.jeffolivier.codes' title='HOME'>&lt;Jeff Olivier Codes /&gt;</a></div>
-    </div>
+    <head>
+        <meta charset="utf-8" />
+        <link rel="icon" href="./images/favicon.ico" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <meta name="theme-color" content="#000000" />
+        <meta
+            name="description"
+            content="Web site created using create-react-app"
+        />
+        <title>TV Show Finder using the tvmaze.com API</title>
+        <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
+            integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
+            crossorigin="anonymous"
+        />
+        <link rel="stylesheet" href="./index.css" />
+    </head>
+    <body>
+        <div class="jo_header">
+            <style>
+                .jo_header {
+                    background-image: url("./images/header.jpeg");
+                    background-position: center 15%;
+                    background-repeat: no-repeat;
+                    background-size: cover;
+                    padding: 10px 10px 10px 20px;
+                    color: white;
+                    font-weight: bold;
+                    text-align: left;
+                    font-family: sans-serif;
+                    font-size: 150%;
+                }
+                .jo_header a {
+                    color: white;
+                    text-decoration: none;
+                }
+                @media only screen and (max-width: 800px) {
+                    .jo_header {
+                        background-position: right;
+                    }
+                }
+                @media only screen and (max-width: 700px) {
+                    .jo_header {
+                        padding: 10px;
+                    }
+                }
+            </style>
+            <div class="jo_name">
+                <a href="http://www.jeffolivier.codes" title="HOME"
+                    >&lt;Jeff Olivier Codes /&gt;</a
+                >
+            </div>
+        </div>
 
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    
-    <div id="root" class="root"></div>
-  </body>
+        <noscript>You need to enable JavaScript to run this app.</noscript>
+
+        <div id="root" class="root"></div>
+    </body>
 </html>
